# bench_matmul

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conclusion.md  main.cc  run_benchmarks.py
.github/workflows/: c-cpp.yml
include/: benchmark.h  matmul.h  pthread_matmul.h  tbb_matmul.h  utils.h
src/: benchmark.cc  main.cc  utils.cc
src/matmul/: blocked.cc  cuda.cu  naive.cc  pthread.cc  simd.cc  tbb.cc  transposed.cc  unrolled.cc
